# ess-research

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  research_plan.yaml
report/: Makefile  README.md  references.bib
report/references/: README.md
report/weeks/: _build_week_01.aux  _build_week_01.out  week_01.tex  week_02.tex  week_03.tex
scripts/: debug_checkpoint.py  h5_failure_analysis.py  research_report.py  run_all_experiments.py  summarize_results.py
src/datamodule/: __init__.py  datamodule.py  dataset.py
src/losses/: __init__.py  bce.py  segmentation.py
src/metrics/: __init__.py  segmentation.py
src/model/: base.py  module.py
src/model/sam3/: __init__.py  model.py
src/utils/: __init__.py  logging.py
src/visualization/: __init__.py  predictions.py
tests/datamodule/: test_datamodule.py  test_dataset.py
tests/model/: test_sam3_model.py
